--- a/stranicaa.css
+++ b/stranicaa.css
@@ -15,6 +15,12 @@ header {
     top:0;
   
   }
+h4
+{
+   font-size:25px;
+   color: #ffffff;
+font-family: 'Century Gothic', sans-serif;
+}
 
   
   
