--- a/stranicaa.css
+++ b/stranicaa.css
@@ -4,10 +4,11 @@ html, body{
     padding:0px;
     margin:0px;
     background: #262626;
+    
 }
 
 header {
-
+    
     background: #fff;
   }
   .fixed{
@@ -15,12 +16,6 @@ header {
     top:0;
   
   }
-h4
-{
-   font-size:25px;
-   color: #ffffff;
-font-family: 'Century Gothic', sans-serif;
-}
 
   
   
@@ -169,16 +164,15 @@ p{  font-family: 'Poppins',  sans-serif;
 .inner_main_menu ul li:nth-child(1){float:left;}
 .inner_main_menu ul li:nth-child(2){float:left;}
 .inner_main_menu ul li:nth-child(3){float:left;}
-.inner_main_menu ul li a{ font-family: Ink Free; color:#262626; font-size: 20px; text-transform: uppercase; text-decoration: none; display: block; padding: 10px 20px;}
+.inner_main_menu ul li a{ text-align: right;font-family: 'Rock Salt', cursive;color:#262626; font-size: px; text-transform: uppercase; text-decoration: none; display: block; padding: 10px 20px;}
 .inner_main_menu ul li a:hover{color:#f30909}
-#main_menu{width: 100%; position: relative;}
+.main_menu{
+    width: 100%; position: relative;}
 .logo_area{
-    width: 200px;
-    height:200px; 
     position: absolute; 
     left:50%; top:0; 
     content: "";
-    margin-left: -120px;
+    margin-left: -60px;
     text-align: center;
 }
 
@@ -467,3 +461,60 @@ cursor: pointer;
     color:#303030;
     font-size:14px ;
 }
+.boja{
+    background-color: black;
+    height: 50px;
+    width: 100%;
+}
+
+#slider{
+   
+    overflow: hidden;
+    
+}
+#slider figure{
+
+padding: 0px;
+position: relative;
+width: 500%;
+margin: 0;
+left: 0;
+animation: 20s slider infinite;
+}
+#slider figure img{
+    width: 20%;
+    float: left;
+}
+@keyframes slider{
+    0%{
+        left:0%;
+    }
+    20%{
+        left:0%;
+    }
+    25%{
+        left:-100%;
+    }
+    45%{
+        left:-100%;
+    }
+    50%{
+        left:-200%;
+    }
+    70%{
+        left:-200%;
+    }
+    75%{
+        left:-300%;
+    }
+    90%{
+        left:-300%;
+    }
+    100%{
+        left:-300%;
+    }
+}
+.sve{
+    overflow-x: hidden;
+}
+
